Test against the simpler getId() function. Switch to Electron 2.0.1.

--- a/lib/index.html
+++ b/lib/index.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <webview src="https://www.google.com/?q=search"></webview>
+  <webview src="https://www.google.com/?q=software%20bug"></webview>
   <script src="webview.js"></script>
 </body>
 </html>
